c4prj1_deck/grade.txt
Grading at Wed Jan 27 15:11:24 UTC 2021
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c:464:12: error: redefinition of ‘get_match_counts’
 unsigned * get_match_counts(deck_t * hand) {
            ^
eval.c:313:12: note: previous definition of ‘get_match_counts’ was here
 unsigned * get_match_counts(deck_t * hand) {
            ^
Compilation of eval.c failed

Overall Grade: F
